VP 10.5.0 Changelog
------------------------

- global physics settings: a value of -1 for the flipper physics will disable the physics value defined in the physics set

- add 'Set Defaults' button to the editor properties to reset editor changes and position/size of the script window

- increase usable layers from 8 to 11

- add ScreenSpace Reflections to the global video and table user properties, strength can be changed in the table lighting panel
  This adds very fake, but also very fast local reflection effects to all table elements

- add 'Disable Lighting from below' functionality for Targets and Walls (0..1) to optionally disable light coming from below (e.g. from light elements)

- fix ramp collision/internal walls reaching below and above the actual visible walls or wires, which was mainly an issue for rather straight and/or very steep ramps

- draw also flipper thickness in the editor

- improve gate swing physics, correct backwards initial swing, and expose new gravity factor parameter.
  Also add some "bounce back" for 1-way gates. Currently set up to use as-is defaults, but Wrd1972 recommends the following settings:
   Ideal setting for GATE motion:
    Elasticity = .4 (default)
    Friction = .02 (default)
    Dampening = .85
    Gravity = 3
   Ideal for SWITCH ACTUATOR motion:
    Elasticity = .4 (default)
    Friction = .02 (default)
    Dampening = .9
    Gravity = 1

- add copy/paste feature for control points. Select a control point, press the "Copy" button or CTRL+C to copy the coordinates. 
  Then select another control point of another element and press the "Paste" button or leave the mouse cursor over the control point and press CTRL+V.
  ATTENTION: you can also copy/paste control points of the same element but this can lead to bad shapes of the selected element

- fix kicker export bug

- improve quality of internal DMD shader, now it's almost resolution independent, especially when using it via flashers (e.g. FSS tables and the like)
