@@ -712,8 +712,8 @@ BEGIN
     LTEXT           "Default Material Color",IDC_STATIC,6,80,68,8
     GROUPBOX        "Throw Balls in Player",IDC_STATIC,3,191,178,31
     CONTROL         "Always On",IDC_THROW_BALLS_ALWAYS_ON_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,205,49,10
-    LTEXT           "Ball size",IDC_STATIC,117,206,28,8
-    EDITTEXT        IDC_THROW_BALLS_SIZE_EDIT,149,204,27,12,ES_AUTOHSCROLL
+    LTEXT           "Ball size",IDC_STATIC,61,206,28,8
+    EDITTEXT        IDC_THROW_BALLS_SIZE_EDIT,89,204,27,12,ES_AUTOHSCROLL
     CONTROL         "Start VP with File Dialog open to directly play",IDC_START_VP_FILE_DIALOG,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,225,174,10
     CONTROL         "Custom2",IDC_COLOR2,"ColorControl",WS_TABSTOP,78,95,32,16
@@ -731,6 +731,8 @@ BEGIN
     COMBOBOX        IDC_UNIT_LIST_COMBO,75,239,83,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Reset editor settings",IDC_STATIC,65,176,66,10
     PUSHBUTTON      "Set Defaults",IDC_SET_DEFAULTS_BUTTON,131,174,50,14
+    EDITTEXT        IDC_THROW_BALLS_MASS_EDIT,150,204,27,12,ES_AUTOHSCROLL
+    LTEXT           "Mass",IDC_STATIC,130,206,18,8
 END
 
 IDD_COLLECTDIALOG DIALOGEX 0, 0, 316, 167
@@ -1724,7 +1726,7 @@ BEGIN
     LTEXT           "Gravity Factor",IDC_STATIC,7,51,55,8
 END
 
-IDD_DEBUGGER DIALOGEX 0, 0, 347, 214
+IDD_DEBUGGER DIALOGEX 0, 0, 381, 214
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Debugger and Interactive Editor"
@@ -1736,16 +1738,18 @@ BEGIN
     CONTROL         "Check2",IDC_PAUSE,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,25,7,18,17
     CONTROL         "Check2",IDC_STEP,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,43,7,18,17
     CONTROL         ">",IDC_EXPAND,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,118,7,14,17
-    LTEXT           "Static",IDC_GUIDE2,320,190,25,8,NOT WS_VISIBLE
+    LTEXT           "Static",IDC_GUIDE2,350,190,25,8,NOT WS_VISIBLE
     LTEXT           "Immediate Window",IDC_STATIC,7,53,63,9
     LTEXT           "",IDC_TOOLBARSIZE,155,16,54,24
     CONTROL         "Throw Balls in Player",IDC_BALL_THROWING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,27,81,10
     LTEXT           "Ball Size",IDC_STATIC,8,40,28,8
     EDITTEXT        IDC_THROW_BALL_SIZE_EDIT2,36,38,25,12,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_GUIDE1,117,27,23,10,NOT WS_VISIBLE
-    PUSHBUTTON      "&Lights",IDC_DBGLIGHTSBUTTON,66,37,34,14
-    LTEXT           "Static",IDC_EDITSIZE,9,65,332,144,NOT WS_VISIBLE | WS_BORDER
-    PUSHBUTTON      "&Materials",IDC_DBG_MATERIALS_BUTTON,102,37,34,14
+    LTEXT           "Static",IDC_GUIDE1,159,27,23,10,NOT WS_VISIBLE
+    PUSHBUTTON      "&Lights",IDC_DBGLIGHTSBUTTON,116,37,34,14
+    LTEXT           "Static",IDC_EDITSIZE,9,65,362,144,NOT WS_VISIBLE | WS_BORDER
+    PUSHBUTTON      "&Materials",IDC_DBG_MATERIALS_BUTTON,152,37,34,14
+    EDITTEXT        IDC_THROW_BALL_MASS_EDIT2,88,38,25,12,ES_AUTOHSCROLL
+    LTEXT           "Mass",IDC_STATIC,69,40,18,8
 END
 
 IDD_PROPKICKER_STATE DIALOGEX 0, 0, 125, 93
@@ -2611,7 +2615,7 @@ BEGIN
 
     IDD_DEBUGGER, DIALOG
     BEGIN
-        RIGHTMARGIN, 346
+        RIGHTMARGIN, 380
     END
 
     IDD_PROPKICKER_STATE, DIALOG
